# mojo

./: .gitignore  CLAUDE.md  OPTIMIZATIONS.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  deploy.yml
engine/: Cargo.toml  FEATURES.md  NNUE_DECISION.md  OPENINGS_LICENSE  SIZE_DECISION.md  SPSA.md  THREADS_DECISION.md  accuracy.mjs  bench.mjs  book-validation.tsv  build-wasm.mjs  filter-openings.mjs  generate-book.mjs  generate-openings.mjs  openings-balanced.json  openings.json  selfplay.mjs  spsa.mjs  validate-book.mjs  validate-cancellation.mjs  validate-openings.mjs  validate-seeding.mjs  validate-size.mjs
engine/pkg/: LICENSE  mojo_engine.d.ts  mojo_engine.js  mojo_engine_bg.wasm  mojo_engine_bg.wasm.d.ts  mojo_engine_simd_bg.wasm  package.json
engine/src/: book.rs  eval.rs  eval_tuned.rs  kpk.rs  lib.rs  search.rs
engine/src/search/: correction.rs  mod.rs  moves.rs  ordering.rs  pawn_cache.rs  position.rs  see.rs  tt.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/scripts/: prepare-engine-versions.mjs  prepare-stockfish.mjs
web/src/: App.test.tsx  App.tsx  Root.test.tsx  Root.tsx  appState.test.ts  appState.ts  chess.test.ts  main.tsx  material.test.ts  material.ts  moveHistory.test.ts  moveHistory.ts  setupTests.ts  styles.css  vite-env.d.ts
web/src/comparison/: ComparePage.test.tsx  ComparePage.tsx  match.test.ts  match.ts  types.ts  useComparisonMatch.test.tsx  useComparisonMatch.ts  worker.ts
web/src/components/: AnalysisPanel.tsx  EvaluationBar.test.tsx  EvaluationBar.tsx  MaterialDisplay.tsx  MoveHistory.test.tsx  MoveHistory.tsx  SettingsPanel.tsx  SetupDialog.test.tsx  (+1 more)
(+20 files in other folders)
