[package]
name = "mojo-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Mojo chess search engine compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayvec = "0.7"
cozy-chess = "0.3.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
