[package]
name = "mojo-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Mojo chess search engine compiled to WebAssembly"
repository = "https://github.com/sbharga/mojo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tuning = []
spsa = []

[[bin]]
name = "texel"
path = "src/bin/texel.rs"
required-features = ["tuning"]

[dependencies]
arrayvec = "0.7"
cozy-chess = "0.3.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd", "--strip-producers", "--strip-target-features"]
